* user jako singleton
* przygotowania do translacji
* skróty klawiatórowe
* ikony
* przerobienie funkcji sha1 (?)
-------------------------------------------------------------------------

v. 2.3
* poprawione wstawianie loga do oferty (issue #2)
* poprawione przeliczanie wartości w tabeli po dodawaniu towaru do oferty (issue #3)
* poprawiona edycja/dodawanie towaru (issue #4)

v. 2.21
* Poprawiony tytuł okna dialogowego wstawiania opcji komboboksa
* Poprawione odświerzanie szczegółowych danych produktu przy użyciu klawiatury
* Zwężenie widgetu na szczegółoe dane produktu
* Maksymalizacja okna dialogowego wyboru towaru

v. 2.2
* Niewielkie poprawki w zapisie loga.
* Odwrócenie kolejności tego changeloga
* Usunięcie części funkcji administracyjnych z programu
* możliwość dodawania opcji komboboksów do bazy
* prawidłowy druk wieloliniowych uwag

v. 2.1
* drobne poprawki w różnych miejscach
* przeniesienie serwera na platformę Raspbery Pi
* opcje comboboxów przeniesione do bazy
* zapisane ofery w formie odnośników do tabeli combosów
* unifikacja stylu nazw plików i klas
* ograniczenie ilości odwołań do bazy danych dzięki przekazywaniu rekordów między oknami
* usunięcie okna ustawień bazy, które przestało być aktualne
* usunięcie klasy wydruk i przeniesienie odpowiednich funkcji do MainWindow
* wskaźnik na usera jako zmienna globalna
* cena towaru jako zmienna numeryczna (nie napis)
* konstruowanie okien dopiero przy ich wywołaniu
* zapisywanie uwag w bazie jako tekstu

v. 2.01
* poprawiony błąd przy wczytywaniu rabatu

v. 2.0
* ponowne przebudowanie struktury plików źródłowych
* update bibliotek qt dla systemu windows do wersji 4.8.4
* przebudowana główna funkcja programu
* lepsze radzenie sobie z problemami sterownika mysql
* wyszukiwanie towarów zaimplementowane jako model-view w osobnym widżecie
* nowe okno dodawania towarów
* dodatkowy editbox na "uwagi"
* małe poprawki w wydruku oferty

v. 1.9
* drobne poprawki w różnych miejscach